gcc/testsuite/algol68/compile/mcgt-7.1.3a-bis.a68
# { dg-options "-fstropping=upper" }  #

# Transient references and declarations.  #
BEGIN FLEX[4,6]INT p;
      # Illegal, cannot remember transient name.  #
      REF[]INT q2 = p[3,]; # { dg-error "" }  #
      SKIP
END
